# tuxfetch

./: Cargo.toml  README.md  default.nix  result  shell.nix  tea (1).yaml  wm.sh
src/: main.rs
