[package]
name = "tuxfetch"
description = "A fetch utility for the love of penguins but in Rust"
authors = ["Atharva Amritkar<atharvaamritkar@protonmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/atharvaamritkar/tuxfetch"
license = "GPL-3.0"
keywords = ["fetch", "sysinfo"]
categories = ["command-line-utilities"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.20.0"
ansi_term = "0.12.1"
termion = "1.5.6"
nixinfo = "0.2.8"
whoami = "1.1.2"
